--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
-}
+*{
+  font-family: 'Poppins', sans-serif;
+  margin: 0px;
+  padding: 0px;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
+body{
+  overflow-x: hidden;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h5 {
+  font-size: 2.30rem;
+  line-height: 3rem;
+  font-weight: 500;
+  margin: 0 0 25px 0;
+  padding: 0;
 }
-
-.App-link {
-  color: #61dafb;
+h4{
+    font-size: 2.85rem;
+      line-height: 3.4rem;
+      margin: 0 0 25px 0;
+      padding: 0;
+      font-weight: 600 ;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+span{
+  font-weight: 700;
+  letter-spacing: -0.50px;
+  color:#FD961E;
 }
